Test sanitizer hook findings via subprocess